# oncall

./: .gitignore  README.md  blackbox.yml  deploy.yml  docker-compose.yml  filebeat.yml  hosts.ini  nginx.conf.j2  prometheus.yml  pyproject.toml  rolling-deploy-instance.yml  rolling-deploy.yml  tasks.yml
configs/: schedule.yml
oncaller/: api_requests.py  config.py  main.py  models.py  parser.py
src/oncall/api/v0/: roster_user.py  roster_users.py
textfile/: random.prom
